added new API for Loom